# grape_ml

./: .travis.yml  Cargo.toml  README.md
examples/xor_perceptron/: main.rs
src/: lib.rs  main.rs
src/math/: .travis.yml  matrix.rs  mod.rs  unsafe_sync.rs
src/nodes/: fully_connected_nn.rs  mod.rs  node.rs  partially_connected_nn.rs
src/utils/: mod.rs  neural_network.rs
