[package]
name = "grape_ml"
version = "0.0.1"
authors = ["Andrea Catania <info@andreacatania.com>"]
edition = "2018"
repository = "https://github.com/AndreaCatania/grape_ml"
description = "Machine Learning framework which allows to analyze the data with different and organized data analysis algorithms."
keywords = ["Machine-Learning", "Artificial-Intelligence", "Deep-Learning", "Neural-Network", "Data"]
categories = ["neural_network", "machine_learning", "deep_learning"]
readme = "README.md"
license = "MIT"

[dependencies]
rand = "0.6.5"
simdeez = "0.6.4"
rayon = "1.2.0"
