[package]
name = "grape_ml"
version = "0.0.1"
authors = ["Andrea Catania <info@andreacatania.com>"]
edition = "2018"
repository = "https://github.com/AndreaCatania/grape_ml"
description = "Machine Learning framework which allows to analyze the data with different and organized data analysis algorithms."
keywords = ["Machine-Learning", "Artificial", "Intelligence", "Deep-Learning", "Neural-Network"]
categories = ["neural_network", "machine_learning", "deep_learning"]
readme = "README.md"
license = "MIT"

[dependencies]
mathru = "0.2.1"